# vlc

./: INSTALL  configure.ac  meson_options.txt
modules/video_output/: meson.build
modules/video_output/wayland/: output.c
